# tuya-open-sdk-for-device

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_zh.md  configure  tos
apps/tuya_cloud/switch_demo/: CMakeLists.txt  README.md  README_CN.md  project_build.ini
apps/tuya_cloud/switch_demo/src/: cli_cmd.c  qrencode_print.c  switch_demo.c  tuya_config.h
board/: README.md  board_config.yaml
examples/peripherals/gpio/: CMakeLists.txt  Kconfig  README.md  README_CN.md  project_build.ini
examples/peripherals/gpio/src/: example_gpio.c
examples/protocols/mqtt/: CMakeLists.txt  project_build.ini
examples/protocols/mqtt/src/: examples_mqtt_client.c
src/libcjson/: CMakeLists.txt
src/libhttp/: CMakeLists.txt
src/libhttp/coreHTTP/: core_http_config.h
src/libhttp/coreHTTP/source/: core_http_client.c
src/libhttp/coreHTTP/source/include/: core_http_client.h  core_http_client_private.h  core_http_config_defaults.h
src/libhttp/include/: http_client_interface.h  http_download.h
src/libhttp/src/: http_client_wrapper.c  http_download.c
src/liblwip/: CMakeLists.txt  Kconfig
src/liblwip/lwip-2.1.2/src/api/: api_lib.c  api_msg.c  sockets.c
src/liblwip/lwip-2.1.2/src/apps/dhcpserver/: dhcpserver.c
src/liblwip/lwip-2.1.2/src/core/: mem.c  netif.c  tcp.c  tcp_in.c  tcp_out.c  udp.c
src/liblwip/lwip-2.1.2/src/core/ipv4/: dhcp.c  eapol.c  igmp.c  ip4.c
src/liblwip/lwip-2.1.2/src/core/ipv6/: ip6_addr.c  nd6.c
src/liblwip/lwip-2.1.2/src/include/lwip/: arch.h  dhcp.h  eapol.h  ethernetif.h  lwip_dhcpc.h  lwip_init.h  lwipopts.h  netif.h  sockets.h  sys.h  tcp.h
src/liblwip/lwip-2.1.2/src/include/lwip/apps/: dhcpserver.h  dhcpserver_options.h
src/liblwip/lwip-2.1.2/src/include/lwip/arch/: bpstruct.h  cc.h  cpu.h  epstruct.h  lib.h  perf.h  sys_arch.h
src/liblwip/lwip-2.1.2/src/include/lwip/prot/: ieee.h
src/liblwip/lwip-2.1.2/src/netif/: ethernet.c
src/liblwip/port/: ethernetif.c  lwip_dhcpc.c  lwip_init.c  sys_arch.c
src/libtls/: CMakeLists.txt  Kconfig
src/libtls/include/: cipher_wrapper.h
src/libtls/mbedtls-3.1.0/include/mbedtls/: build_info.h  ssl.h
src/libtls/port/: threading_alt.h  tuya_tls_config.h
src/libtls/src/: cipher_wrapper.c
src/tal_bluetooth/: CMakeLists.txt
src/tal_bluetooth/include/: tal_bluetooth.h  tal_bluetooth_def.h  tal_bluetooth_mesh_def.h  tal_bluetooth_mesh_device.h  tal_bluetooth_mesh_firmware_infor_inner.h  tal_bluetooth_mesh_prov.h  tal_fast_provision_inner.h
src/tal_bluetooth/nimble/: tkl_bluetooth.c
src/tal_bluetooth/nimble/host/: addr.c  ble_att.c  ble_att_clt.c  ble_att_cmd.c  ble_att_cmd_priv.h  ble_att_priv.h  ble_att_svr.c  ble_gap.c  ble_gap_priv.h  ble_gatt_priv.h  ble_gattc.c  ble_gatts.c  ble_gatts_lcl.c  ble_hs.c  ble_hs_adv.c  ble_hs_atomic.c  ble_hs_cfg.c  ble_hs_conn.c  ble_hs_conn_priv.h  ble_hs_endian.c  ble_hs_flow.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_hci_priv.h  ble_hs_hci_util.c  ble_hs_id.c  ble_hs_log.c  ble_hs_mbuf.c  ble_hs_misc.c  ble_hs_mqueue.c  ble_hs_periodic_sync.c  ble_hs_periodic_sync_priv.h  ble_hs_priv.h  ble_hs_pvcy.c  ble_hs_shutdown.c  ble_hs_startup.c  ble_hs_stop.c  ble_l2cap.c  ble_l2cap_coc.c  (+26 more)
src/tal_bluetooth/nimble/include/: ble_att.h  ble_endian.h  ble_gap.h  ble_gatt.h  ble_hs.h  ble_hs_definition.h  ble_hs_id.h  ble_hs_log.h  ble_l2cap.h  ble_monitor.h  ble_sm.h  ble_store.h  ble_trace_api.h  hci_common.h  tuya_ble.h  tuya_ble_cfg.h  tuya_ble_ll_cfg.h  tuya_ble_mbuf.h  tuya_ble_os_adapter.h  tuya_ble_peer.h  tuya_hs_port.h
src/tal_bluetooth/nimble/modules/: ble_eddystone.c  ble_ibeacon.c  tuya_ble_cli_svc.c
src/tal_bluetooth/src/: tal_bluetooth.c
src/tal_kv/: CMakeLists.txt
src/tal_kv/include/: storage_interface.h  tal_kv.h
src/tal_kv/port/: fal_cfg.h  fdb_cfg.h  fdb_port.c  lfs_config.h
src/tal_kv/port/flashdb/: fdb_def.h  fdb_low_lvl.h  flashdb.h
src/tal_kv/src/: kv_serialize.c  storage_wrapper.c  tal_kv.c
src/tal_security/: CMakeLists.txt
src/tal_security/include/: tal_asymmetrical.h  tal_hash.h  tal_security.h  tal_symmetry.h  tal_x509.h
src/tal_security/src/: tal_asymmetrical.c  tal_hash.c  tal_symmetry.c  tal_x509.c
src/tal_security/src/mbedtls/: mbedtls_asymmetrical.c  mbedtls_hash.c  mbedtls_symmetry.c
src/tal_wired/: CMakeLists.txt
src/tal_wired/include/: tal_wired.h
src/tal_wired/src/: tal_wired.c
src/tuya_cloud_service/: CMakeLists.txt  Kconfig
src/tuya_cloud_service/ble/: ble_channel.c  ble_channel.h  ble_cryption.c  ble_cryption.h  ble_dp.c  ble_dp.h  ble_mgr.c  ble_mgr.h  ble_netcfg.c  ble_netcfg.h  ble_protocol.h  ble_trsmitr.c  ble_trsmitr.h
src/tuya_cloud_service/cloud/: atop_base.c  atop_base.h  atop_service.c  atop_service.h  iotdns.c  iotdns.h  matop_service.c  matop_service.h  mqtt_bind.c  mqtt_bind.h  mqtt_service.c  mqtt_service.h  tuya_ble_service.h  tuya_config_defaults.h  tuya_endpoint.c  tuya_endpoint.h  tuya_health.c  tuya_health.h  tuya_http.c  tuya_iot.c  tuya_iot.h  tuya_log.h  tuya_ota.c  tuya_ota.h  tuya_register_center.c  tuya_register_center.h
src/tuya_cloud_service/lan/: lan_sock.c  lan_sock.h  tuya_lan.c  tuya_lan.h
src/tuya_cloud_service/netcfg/: ap_netcfg.c  ap_netcfg.h  ap_pbkdf2.c  netcfg.c  netcfg.h
src/tuya_cloud_service/netmgr/: netconn_wifi.c  netconn_wifi.h  netconn_wired.c  netconn_wired.h  netmgr.c  netmgr.h
src/tuya_cloud_service/protocol/: tuya_protocol.c  tuya_protocol.h
src/tuya_cloud_service/schema/: dp_schema.c  dp_schema.h  tuya_iot_dp.c  tuya_iot_dp.h
src/tuya_cloud_service/tls/: tuya_tls.c  tuya_tls.h
src/tuya_cloud_service/transport/: tcp_transporter.c  tcp_transporter.h  tls_transporter.c  tls_transporter.h  tuya_transport.c  tuya_transporter.h  websocket_transporter.c  websocket_transporter.h
tools/app_template/arduino/: CMakeLists.txt  Kconfig  project_build.ini
tools/app_template/arduino/src/: hello_world.cpp
tools/app_template/base/: CMakeLists.txt  project_build.ini
tools/ut/: .gitignore  CMakeLists.txt  git_clone.sh  modify_mockcpp.sh  show_cover.sh
(+391 files in other folders)
